# oneiros-ceobench

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
configs/: azure_gpt_oneiros_smoke.yaml
docs/: _config.yml  index.md  methodology.md
examples/: week_001_observed.jsonl
oneiros_ceobench/: __init__.py  cli.py  codex_events.py  codex_loop.py  codex_worker.py  config.py  oneiros_config.py  oneiros_runtime.py  results.py  state.py  transcript_export.py
prompts/: AGENTS.md
tests/: test_codex_events.py  test_codex_loop.py  test_config.py  test_oneiros_config.py  test_oneiros_runtime.py  test_transcript_export.py
